--- a/src/main/resources/fxml/NewCarCreationView.fxml
+++ b/src/main/resources/fxml/NewCarCreationView.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.collections.*?>
+
+<?import java.lang.*?>
+<?import java.util.HashMap ?>
 
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.htwsaar.prog3.carrental.controller.NewCarCreationViewController">
 	<top>
@@ -14,11 +17,11 @@
 				</Menu>
 			</menus>
 			<padding>
-            	<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         	</padding>
-         <BorderPane.margin>
-            <Insets top="5.0" />
-         </BorderPane.margin>
+				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+			</padding>
+			<BorderPane.margin>
+				<Insets top="5.0" />
+			</BorderPane.margin>
 		</MenuBar>
 	</top>
 	<center>
@@ -37,28 +40,50 @@
 					<TextField fx:id="constructionYearTextField" GridPane.columnIndex="4" GridPane.rowIndex="1" />
 					<Label text="%new-car-drivenDistance-label" GridPane.columnIndex="5" GridPane.rowIndex="0" />
 					<TextField fx:id="drivenDistanceTextField" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-					
+
 					<Label text="%new-car-gearBox-label" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-					<TextField fx:id="gearBoxTextField" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+					<fx:define>
+						<HashMap fx:id="gearboxBundle" manual="%new-car-gearBox-manual" semiautomatic="%new-car-gearBox-semiautomatic" automatic="%new-car-gearBox-automatic" />
+					</fx:define>
+					<ChoiceBox fx:id="gearBoxChoiceBox" GridPane.columnIndex="0" GridPane.rowIndex="3">
+						<items>
+							<FXCollections fx:factory="observableArrayList">
+								<fx:reference source="gearboxBundle.manual" />
+								<fx:reference source="gearboxBundle.semiautomatic" />
+								<fx:reference source="gearboxBundle.automatic" />
+							</FXCollections>
+						</items>
+					</ChoiceBox>
 					<Label text="%new-car-horsePower-label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 					<TextField fx:id="horsePowerTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 					<Label text="%new-car-fuel-label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-					<TextField fx:id="fuelTextField" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+					<fx:define>
+						<HashMap fx:id="fuelBundle" petrol="%new-car-fuel-petrol" diesel="%new-car-fuel-diesel" electric="%new-car-fuel-electric" />
+					</fx:define>
+					<ChoiceBox fx:id="fuelChoiceBox" GridPane.columnIndex="2" GridPane.rowIndex="3">
+						<items>
+							<FXCollections fx:factory="observableArrayList">
+								<fx:reference source="fuelBundle.petrol" />
+								<fx:reference source="fuelBundle.diesel" />
+								<fx:reference source="fuelBundle.electric" />
+							</FXCollections>
+						</items>
+					</ChoiceBox>
 					<Label text="%new-car-doorCount-label" GridPane.columnIndex="3" GridPane.rowIndex="2" />
 					<TextField fx:id="doorCountTextField" GridPane.columnIndex="3" GridPane.rowIndex="3" />
 					<Label text="%new-car-tires-label" GridPane.columnIndex="4" GridPane.rowIndex="2" />
 					<TextField fx:id="tiresTextField" GridPane.columnIndex="4" GridPane.rowIndex="3" />
 					<Label text="%new-car-nextInspection-label" GridPane.columnIndex="5" GridPane.rowIndex="2" />
 					<TextField fx:id="nextInspectionTextField" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-					
+
 					<Label text="%new-car-vin-label" GridPane.columnIndex="0" GridPane.rowIndex="4" />
 					<TextField fx:id="vinTextField" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-					
+
 					<Label text="%new-car-equipment-label" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-					<TextField fx:id="equipmentTextField" GridPane.columnIndex="0" GridPane.rowIndex="7" GridPane.columnSpan="6"/>
+					<TextField fx:id="equipmentTextField" GridPane.columnIndex="0" GridPane.rowIndex="7" GridPane.columnSpan="6" />
 					<Label text="%new-car-defects-label" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-					<TextField fx:id="defectsTextField" GridPane.columnIndex="0" GridPane.rowIndex="9" GridPane.columnSpan="6"/>
-					
+					<TextField fx:id="defectsTextField" GridPane.columnIndex="0" GridPane.rowIndex="9" GridPane.columnSpan="6" />
+
 					<Label text="%new-car-licenceNumber-label" GridPane.columnIndex="0" GridPane.rowIndex="10" />
 					<TextField fx:id="licenceNumberTextField" GridPane.columnIndex="0" GridPane.rowIndex="11" />
 					<Label text="%new-car-parkingLot-label" GridPane.columnIndex="1" GridPane.rowIndex="10" />
@@ -66,7 +91,7 @@
 					<Label text="%new-car-dailyRate-label" GridPane.columnIndex="2" GridPane.rowIndex="10" />
 					<TextField fx:id="dailyRateTextField" GridPane.columnIndex="2" GridPane.rowIndex="11" />
 					<padding>
-						<Insets top="25" right="25" bottom="25" left="25"/>
+						<Insets top="25" right="25" bottom="25" left="25" />
 					</padding>
 				</GridPane>
 			</center>
@@ -76,8 +101,9 @@
 		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<right>
 				<GridPane alignment="center" hgap="10" vgap="10">
-					<Button fx:id="cancelButton" mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="%new-car-cancel-button" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-					<Button fx:id="applyButton" mnemonicParsing="false" onAction="#handleApplyButtonClicked" text="%new-car-apply-button" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+					<Button fx:id="cancelButton" mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="%new-car-cancel-button" textAlignment="CENTER" GridPane.columnIndex="0"
+						GridPane.rowIndex="0" />
+					<Button fx:id="applyButton" mnemonicParsing="false" onAction="#handleApplyButtonClicked" text="%new-car-apply-button" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 				</GridPane>
 			</right>
 			<padding>
