--- a/src/main/resources/fxml/CarTableView.fxml
+++ b/src/main/resources/fxml/CarTableView.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.collections.*?>
 
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.htwsaar.prog3.carrental.controller.CarTableViewController">
 	<center>
@@ -31,33 +33,6 @@
 			</columns>
 		</TableView>
 	</center>
-	<top>
-		<MenuBar prefHeight="14.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
-			<menus>
-				<Menu mnemonicParsing="true" text="%menubar-view-file">
-					<items>
-						<MenuItem mnemonicParsing="false" text="%menubar-operation-close" />
-					</items>
-				</Menu>
-				<Menu mnemonicParsing="true" text="%menubar-view-edit">
-					<items>
-						<MenuItem mnemonicParsing="false" text="%menubar-operation-delete" />
-					</items>
-				</Menu>
-				<Menu mnemonicParsing="true" text="%menubar-view-help">
-					<items>
-						<MenuItem mnemonicParsing="false" text="%menubar-operation-about" />
-					</items>
-				</Menu>
-			</menus>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-         <BorderPane.margin>
-            <Insets top="5.0" />
-         </BorderPane.margin>
-		</MenuBar>
-	</top>
 	<bottom>
 		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<right>
@@ -77,4 +52,57 @@
          </BorderPane.margin>
 		</BorderPane>
 	</bottom>
+   <top>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+      		<MenuBar prefHeight="10.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="0">
+      			<menus>
+      				<Menu mnemonicParsing="true" text="%menubar-view-file">
+      					<items>
+      						<MenuItem mnemonicParsing="false" text="%menubar-operation-close" onAction="#closeApplication"/>
+      					</items>
+      				</Menu>
+      				<Menu mnemonicParsing="true" text="%menubar-view-edit">
+      					<items>
+      						<MenuItem mnemonicParsing="false" text="%menubar-operation-delete" />
+      					</items>
+      				</Menu>
+      				<Menu mnemonicParsing="true" text="%menubar-view-help">
+      					<items>
+      						<MenuItem mnemonicParsing="false" text="%menubar-operation-about" />
+      					</items>
+      				</Menu>
+      			</menus>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+      		</MenuBar>
+            <ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1" GridPane.columnIndex="0" promptText="%prompt-search-ComboBoxField" prefWidth="Infinity" />
+            <ComboBox fx:id="searchComboBoxComparator" GridPane.rowIndex="1" GridPane.columnIndex="1" promptText="%prompt-search-ComboBoxComparator" prefWidth="Infinity" >
+            	<items>
+            		<FXCollections fx:factory="observableArrayList">
+            			<String fx:value="=" />
+               			<String fx:value=">" />
+               			<String fx:value="!>" />
+               			<String fx:value="LIKE" />
+            		</FXCollections>
+               	</items>
+            </ComboBox>
+            <TextField fx:id="searchTextField" GridPane.rowIndex="1" GridPane.columnIndex="2" promptText="%prompt-search-TextField"/>
+            <Button fx:id="buttonApplyCurrentFilter" mnemonicParsing="false" onAction="#handleApplyCurrentFilterButtonClicked" text="%button-applyCurrentFilter-label" textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="Infinity" />
+            <Button fx:id="buttonRemoveCurrentFilter" mnemonicParsing="false" onAction="#handleRemoveCurrentFilterButtonClicked" text="%button-removeCurrentFilter-label" textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="4" prefWidth="Infinity" />
+         </children>
+      </GridPane>
+   </top>
 </BorderPane>
