--- a/src/main/resources/fxml/CarTableView.fxml
+++ b/src/main/resources/fxml/CarTableView.fxml
@@ -36,13 +36,13 @@
 	<bottom>
 		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<right>
-				<Button fx:id="editSelectedCarButton" mnemonicParsing="false" onAction="#handleEditButtonCllicked" text="%button-edit-label" textAlignment="CENTER" />
+				<Button fx:id="editSelectedCarButton" mnemonicParsing="false" onAction="#handleEditButtonClicked" text="%button-edit-label" textAlignment="CENTER" />
 			</right>
 			<center>
-				<Button fx:id="createNewCarButton" mnemonicParsing="false" onAction="#handleNewButtonCllicked" text="%button-new-label" textAlignment="CENTER" />
+				<Button fx:id="createNewCarButton" mnemonicParsing="false" onAction="#handleNewButtonClicked" text="%button-new-label" textAlignment="CENTER" />
 			</center>
 			<left>
-				<Button fx:id="deleteSelectedCarButton" mnemonicParsing="false" onAction="#handleDeleteButtonCllicked" text="%button-delete-label" textAlignment="CENTER" />
+				<Button fx:id="deleteSelectedCarButton" mnemonicParsing="false" onAction="#handleDeleteButtonClicked" text="%button-delete-label" textAlignment="CENTER" />
             </left>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
